# vanrijn

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: simple_scene.rs
src/: accumulation_buffer.rs  algebra_utils.rs  camera.rs  colour.rs  image.rs  integrators.rs  lib.rs  main.rs  materials.rs  matrix.rs  mesh.rs  raycasting.rs  realtype.rs  sampler.rs  scene.rs
src/colour/: colour_rgb.rs  colour_xyz.rs  mod.rs  photon.rs  spectrum.rs
src/integrators/: mod.rs  simple_random_integrator.rs  whitted_integrator.rs
src/materials/: lambertian_material.rs  mod.rs  phong_material.rs  reflective_material.rs  rgb_sampled_bsdf_material.rs  smooth_transparent_dialectric.rs
src/math/: mat2.rs  mat3.rs  mat4.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
src/random_distributions/: cosine_weighted_hemisphere.rs  linear_weighted.rs  mod.rs  sky_light_pdf.rs  uniform_hemisphere.rs  uniform_square.rs  unit_disc.rs
src/raycasting/: axis_aligned_bounding_box.rs  bounding_volume_hierarchy.rs  mod.rs  plane.rs  sphere.rs  triangle.rs  vec_aggregate.rs
src/util/: algebra_utils.rs  array2d.rs  axis_aligned_bounding_box.rs  binary_tree.rs  interval.rs  mod.rs  morton.rs  normalizer.rs  polyhedra.rs  tile_iterator.rs
test_data/: Readme.md
