[package]
name = "vanrijn"
version = "0.1.0"
authors = ["Matthew Gordon <matthew.scott.gordon@gmail.com>"]
edition = "2018"

[dependencies]
alga = "0.9"
itertools = "0.8"
obj = "0.9"
quickcheck = "0.9"
quickcheck_macros = "0.8"
rayon = "1.3"
sdl2 = "0.32"

[dependencies.nalgebra]
version = "0.19"
features = ["arbitrary"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simple_scene"
harness = false

[profile.dev]
opt-level = 3

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1