[package]
name = "vanrijn"
version = "0.1.0"
authors = ["Matthew Gordon <matthew.scott.gordon@gmail.com>"]
edition = "2018"

[dependencies]
alga = "0.9"
itertools = "0.9"
obj = "0.9"
quickcheck = "0.9"
quickcheck_macros = "0.9"
rayon = "1.3"
sdl2 = "0.32"
simba = "0.1.2"
csv = "1.1.3"
clap = "2.33"
png = "0.16"

[dependencies.nalgebra]
version = "0.21"
features = ["arbitrary"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simple_scene"
harness = false

[profile.dev]
opt-level = 3

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1